# exercism-python

./: .editorconfig  .envrc  .gitignore  pyproject.toml
.exercism-cd/: Pulumi.python.yaml  Pulumi.yaml  __main__.py
.exercism-cd/components/: exercism.py
.exercism-cd/providers/: exercism.py
.github/: mergify.yml
.github/workflows/: check.yml  ci.yml
.hack/: comment-parser.py  metadata-parser-all.py  metadata-parser.py
.hack/test/: test.py  test.rs
acronym/: acronym.py
allergies/: allergies.py
anagram/: anagram.py
armstrong-numbers/: armstrong_numbers.py
bank-account/: bank_account.py
hamming/: hamming.py
high-scores/: high_scores.py
isogram/: isogram.py
kindergarten-garden/: kindergarten_garden.py
leap/: leap.py
matrix/: matrix.py
matrix/honorable_mentions/: immutable_matrix.py
pangram/: pangram.py
pangram/honorable_mentions/: pangram_0.py  pangram_1.py  pangram_2.py  pangram_3.py
perfect-numbers/: perfect_numbers.py
phone-number/: phone_number.py
protein-translation/: protein_translation.py
protein-translation/honorable_mentions/: protein_translation_0.py
raindrops/: raindrops.py
resistor-color-duo/: resistor_color_duo.py
robot-name/: robot_name.py
scrabble-score/: scrabble_score.py
series/: series.py
space-age/: space_age.py
twelve-days/: twelve_days.py
word-count/: word_count.py
