[tool.poetry]
name = "exercism-python"
version = "0.1.0"
description = ""
authors = ["sprietl"]

[tool.poetry.dependencies]
python = "^3.9"
pulumi = "^3.6.0"
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pylint = "^2.8.2"
pycodestyle = "^2.7.0"
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
